# stellar-insights

./: .gitignore  docker-compose.elk.prod.yml  package-lock.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  load-tests.yml  rollback.yml  zap-scan.yml
backend/: Cargo.toml  Dockerfile  check_warnings.sh
backend/benches/: cache_benchmarks.rs  corridor_benchmarks.rs  database_benchmarks.rs
backend/examples/: ml_test.rs
backend/load-tests/: .gitignore  anchors-load-test.js  corridors-load-test.js  full-suite-load-test.js  rpc-endpoints-load-test.js  run-all-tests.ps1  run-all-tests.sh  spike-test.js  stress-test.js
backend/migrations/: 020_create_api_usage_stats.sql  022_create_replay_tables.sql
backend/src/: broadcast.rs  cache.rs  database.rs  handlers.rs  lib.rs  main.rs  monitor.rs  state.rs  websocket.rs
backend/tests/: api_integration_test.rs  cache_invalidation_test.rs  corridor_metrics_test.rs  error_response_test.rs  payment_processing_test.rs
contracts/: Cargo.toml
contracts/Missing Admin Transfer Events/contracts/analytics/: Cargo.toml
contracts/Missing Admin Transfer Events/contracts/analytics/src/: lib.rs
contracts/Snapshot Comparison Function/: Cargo.toml
contracts/Snapshot Comparison Function/src/: lib.rs
contracts/benches/: Cargo.toml
docs/: RPC.md
elk/: .gitignore  kibana-dashboard.json
frontend/: .eslintrc.a11y.json  .gitignore  next.config.ts  package.json  pnpm-lock.yaml
k8s/: kustomization.yaml  namespace.yaml  network-policy.yaml
k8s/backend/: hpa.yaml  (+4 more)
scripts/: deploy.sh  rollback.sh  start-elk.sh
(+201 files in other folders)
